style fixes; gap between header and post; somewhat nice font for logo

--- a/wall/res/static/client.css
+++ b/wall/res/static/client.css
@@ -12,6 +12,10 @@
 
 @import url(/static/normalize.css);
 
+/* logo font */
+@import url(http://fonts.googleapis.com/css?family=Sacramento|Julius+Sans+One);
+
+
 /* ==== General ==== */
 
 * {
@@ -97,11 +101,12 @@ body {
 /* TODO: replace me with a nice logo */
 #header {
     background: #222;
-    padding: 0.25rem 1rem;
+    padding: 0.95rem 0 0 0;
 }
 #header h1 {
-    font-weight: bold;
-    font-size: 2rem;
+    font-family: 'Sacramento', cursive;
+    line-height: 5.0rem;
+    font-size: 4rem;
     text-align: center;
     margin: 0;
 }
@@ -130,11 +135,11 @@ body {
 #post-menu button {
     height: 5rem;
     width: 5rem;
-    padding: 4rem 0.2rem 0.2rem 0.2rem;
+    padding: 3.75rem 0.2rem 0.2rem 0.2rem;
     margin: 0 1rem 1rem 0;
 
     background: #666 no-repeat center 50%;
-    background-size: 2.5rem 2.5rem;
+    background-size: 2.4rem 2.4rem;
 
     border: none;
     box-shadow: 0.2rem 0.2rem 0.2rem #222;  
@@ -152,7 +157,7 @@ body {
 }
 
 #post p {
-    margin: 0;
+    margin: 1.5rem 0 0 0;
     padding: 0.4rem;
     color: #333;
     font-size: 0.9rem;
